feat: support custom document names on upload
